RetrievePackage/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Citi</fullName>
                </value>
                <value>
                    <fullName>Penfed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>